--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-
-    <div>
-
-   </div>
    
     <h1>
         CACAAAAAA
     </h1>
+
+    <div id="image1">
+        <img src="/images/4189.jpg">
+    </div>
     
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, expedita dolorem a molestias facilis animi velit eos tempora consequatur aut, ipsam ad dolore impedit eaque, maiores sit sapiente consectetur illo.
+    </p>
 
     <script src="/script.js"></script>
 
